# nbody_memory_layout_student_project

./: CMakeLists.txt  README.md  nbody.cpp
slides/: nbody.pptx
